# PQC-AMX

./: .gitignore  CMakeLists.txt  README.md  consolidate_benchmarks.py  run_benchmarks.sh
PQCrypto-LWEKE/: CMakeLists.txt
PQCrypto-LWEKE/FrodoKEM/src/: api_frodo1344.h  api_frodo1344_4x.h  api_frodo640.h  api_frodo640_4x.h  api_frodo976.h  api_frodo976_4x.h  frodo1344.c  frodo1344_4x.c  frodo640.c  frodo640_4x.c  frodo976.c  frodo976_4x.c  frodo_macrify.c  frodo_macrify_4x.c  frodo_macrify_4x.h  frodo_macrify_amx.c  frodo_macrify_amx_4x.c  frodo_macrify_reference.c  frodo_macrify_reference_4x.c  kem.c  kem4x.c  noise_neon.c
aes/: aes_armv8.c
amx/: amx.h  aux_routines.c  aux_routines.h  frodokem_matmul_4x.c  frodokem_matmul_4x.h  frodokem_opt_matmul.c  frodokem_opt_matmul.h  frodokem_opt_matmul_4x.c  frodokem_opt_matmul_4x.h  memory_alloc.h  noise_amx.c  poly_firesaber_amx.c  poly_lightsaber_amx.c  poly_saber_amx.c  polymodmul.c  polymodmul.h  polymodmul_matmul.c  polymodmul_matmul.h
neon-ntt/: CMakeLists.txt
neon-ntt/common/: PQCgenKAT_kem.c  feat.S  fips202.c  fips202x2.c  m1cycles.c
neon-ntt/firesaber/amx/: poly.h  poly_matrixvectormulround.c
neon-ntt/lightsaber/amx/: SABER_indcpa.c  poly.c
neon-ntt/saber/amx/: SABER_indcpa.c  poly.c  poly.h  poly_matrixvectormulround.c
neon-ntt/saber/scheme/: SABER_indcpa.c  SABER_indcpa.h  api.h  kem4x.c  kem4x.h
speed/: sample_ct_experiment.c  speed.h  speed_aes.c  speed_frodokem_opt_amx_matmul.c  speed_frodokem_opt_amx_matmul_4x.c  speed_frodokem_opt_neon_matmul.c  speed_frodokem_opt_neon_matmul_4x.c  speed_frodokem_ref_amx_matmul.c  speed_frodokem_ref_amx_matmul_4x.c  speed_frodokem_ref_matmul.c  speed_frodokem_ref_matmul_4x.c  speed_kem.c  speed_kem4x.c  speed_saber_matrixvectormulround_amx.c  speed_saber_matrixvectormulround_neon.c  speed_saber_polymodmul_amx.c  speed_sample.c
test/: test.h  test_aes.cpp  test_kem.cpp  test_kem4x.cpp  test_polymodmul.cpp  test_sample.cpp
